--- a/src/Pages/FindClasses/FindClasses.css
+++ b/src/Pages/FindClasses/FindClasses.css
@@ -10,23 +10,32 @@
     display:grid;
     width: 100%;
     grid-template-columns: 1fr, 1fr;
+    padding-top: 100px;
     justify-content: center;
     row-gap: 50px;
     column-gap: 45px;
 }
 
+.find-classes-header-container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 55px;
+}
+
+.find-classes-bold {
+    font-weight: bold;
+    font-size: 1.6em;
+    padding-bottom: 20px;
+}
+
 @media (min-width: 1245px) and (max-width: 1759px) {
     .find-classes-results-container {
         grid-template-columns: repeat(2, 1fr);
-        
-        
-        
     }
 }
 
 @media (min-width: 1760px) {
     .find-classes-results-container {
-        
         grid-template-columns: repeat(3, 1fr);
     }
 }
